[package]
name = "expecto_patronum"
version = "0.1.0"
edition = "2021"
description = "A library to add beatiful animals to your panic outputs"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license = "MIT"
repository = "https:://github.com/arjentix/expecto_patronum"
readme = "README.md"
keywords = ["panic", "expect", "unwrap", "animal"]
categories = ["command-line-interface", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = []

[dependencies]
fastmurmur3 = "0.1.2"
